@@ -1,4 +1,6 @@
 * 22/08/14 - v.2.0.5
+   - introduced ff_minode_t and ff_monode_t, changed the interface (now typed)
+     of the ff_Map<S,T>
    - introduced ff_node_t a wrapper template class around the ff_node class
    - the ff_send_out now works also inside the Emitter and Collector of the 
      ordered farm (ofarm)
